--- a/base.tmpl
+++ b/base.tmpl
@@ -4,8 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>mendel.sh</title>
 	<link rel="stylesheet" href="/static/inter/inter.css">
 	<link rel="stylesheet" href="/static/new.min.css">
+	<link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="static/favicon/apple-touch-icon.png">
+	<link rel="manifest" href="static/site.webmanifest">
 </head>
 <body>
 	{{ if eq .Name "resume.md" }}
